--- a/demo/_conf/_pylon.yaml
+++ b/demo/_conf/_pylon.yaml
@@ -2,7 +2,15 @@ sys:
     admin:  !R.system
             res: 
                 - !R.vars
-                     defs: { APP_SYS: "admin", DOMAIN : "admin.${MAIN_DOMAIN}" ,PHP_INI : "${PRJ_ROOT}/_conf/used/admin_php.ini" }
+                     defs: { APP_SYS: "admin", DOMAIN : "admin.${MAIN_DOMAIN}" ,
+                     PHP_INI : "${PRJ_ROOT}/_conf/used/admin_php.ini" ,
+                     PRJ_INCLUDE: "${SRC_ROOT}/" }
+
+                - !R.file_tpl
+                        env : !R.vars
+                                defs: {}
+                        tpl:  "${PRJ_ROOT}/_conf/options/tpl_php.ini"
+                        dst:  "${PRJ_ROOT}/_conf/used/admin_php.ini"
                 - !R.apache_conf_tpl  
                         env: !R.vars
                             defs:  { ADMIN_DOMAIN : "admin.${DOMAIN}",  FASTCGI_PORT: "${PORT_BASE}1" }
