--- a/demo/_conf/options/tpl_php.ini
+++ b/demo/_conf/options/tpl_php.ini
@@ -1,5 +1,5 @@
 magic_quotes_gpc = Off
-include_path= ".${PRJ_INCLUDE}:/home/z/php:/usr/local/lib/php:/usr/share/php":
+include_path= ".:${PRJ_INCLUDE}:/home/z/php:/usr/local/lib/php:/usr/share/php":
 ; extension = dba.so
 ; extension = memcache.so
 upload_max_filesize = 10M
