--- a/demo/_conf/_os_env_ubt.yaml
+++ b/demo/_conf/_os_env_ubt.yaml
@@ -1,6 +1,7 @@
 !OS.env_conf
     nginx_conf_path  : "/etc/nginx/sites-enabled"
-    apache_ctrl      : "/usr/local/apache2/bin/apachectl"
-    apache_conf_path : "/usr/local/apache2/conf/include"
+    apache_ctrl      : "/sbin/service httpd"
+    apache_conf_path : "/etc/httpd/conf.d"
+    nginx_ctrl       : "/sbin/service nginx"
     spawn_fcgi       : "/usr/bin/spawn-fcgi"
     php_cgi          : "/usr/bin/php5-cgi"
