--- a/demo/_conf/_os_env.yaml
+++ b/demo/_conf/_os_env.yaml
@@ -5,5 +5,5 @@
     spawn_fcgi       : "/usr/bin/spawn-fcgi"
     php_cgi          : "/usr/bin/php5-cgi"
     php_cgi          : "/usr/local/php/bin/php-cgi"
-    php              : "/usr/local/php/bin/php"
+    php              : "/usr/bin/php"
     python           : "python"
