--- a/demo/_conf/_os_env.yaml
+++ b/demo/_conf/_os_env.yaml
@@ -7,3 +7,4 @@
     php_cgi          : "/usr/local/php/bin/php-cgi"
     php              : "/usr/bin/php"
     python           : "python"
+    syslog           : "/etc/rc.d/init.d/syslog-ng"
